(fix): @ symbol cut off in channel boost search (#507)

--- a/app/src/modules/boost/creator/creator.component.scss
+++ b/app/src/modules/boost/creator/creator.component.scss
@@ -201,7 +201,7 @@
         width: 15em;
         max-width: 90%;
         height: auto;
-        line-height: 1;
+        line-height: 1.2;
       }
     }
   }
